# telegram_rust

./: .gitignore  Cargo.toml  README.md  requirements.txt  telegram_client.bkup  telegram_client.latest  telegram_client.py  telegram_session.session-journal
src/: app.rs  commands.rs  config.rs  formatting.rs  main.rs  persistence.rs  split_view.rs  telegram.rs  utils.rs  widgets.rs
telegram_client_rs/: .gitignore  README.md  build.sh
telegram_client_rs/src/: app.rs  main.rs  split_view.rs  utils.rs  widgets.rs
telegram_tui/: __init__.py  __main__.py  app.py  commands.py  config.py  css.py  formatting.py  messages.py  utils.py  widgets.py
