[package]
name = "telegram_client_rs"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Telegram client
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
regex = "1.11"
unicode-width = "0.2"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"